--- a/hack/release.toml
+++ b/hack/release.toml
@@ -5,13 +5,13 @@ project_name = "terraform-provider-talos"
 github_repo = "siderolabs/terraform-provider-talos"
 match_deps = "^github.com/(siderolabs/[a-zA-Z0-9-]+)$"
 
-previous = "v0.1.0-alpha.10"
+previous = "v0.1.0-alpha.11"
 pre_release = true
 
 [notes]
 
     [notes.updates]
-        title = "Component Updates"
+        title = "Fixes"
         description = """\
-Talos sdk: v1.2.7
+Fixed an issue with the provider when using a secure Talos client.
 """
