--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -1,6 +1,10 @@
-name: ci
+name: acceptance-tests
 on:
   pull_request:
+    paths:
+      - 'go.mod'
+      - 'go.sum'
+      - '**.go'
 jobs:
   run-tests:
     runs-on: ubuntu-latest
@@ -8,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
           go-version-file: 'go.mod'
           cache: true
@@ -16,9 +20,6 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_wrapper: false
-      - name: dirty-check
-        run: |
-          make check-dirty
       - name: Set up libvirt
         run: |
           sudo apt-get update
