feat: `talos_machine_disks` data source
Add `talos_machine_disks` data source.

Fixes: #55

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -19,3 +19,5 @@ jobs:
       - name: dirty-check
         run: |
           make check-dirty
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
