--- a/hack/release.toml
+++ b/hack/release.toml
@@ -5,10 +5,16 @@ project_name = "terraform-provider-talos"
 github_repo = "siderolabs/terraform-provider-talos"
 match_deps = "^github.com/(siderolabs/[a-zA-Z0-9-]+)$"
 
-previous = "v0.2.0-alpha.0"
+previous = "v0.2.0-alpha.1"
 pre_release = true
 
 [notes]
+
+    [notes.datasources]
+        title = "Data Sources"
+        description = """\
+`talos_machine_disks` data source is added to list disks on a machine.
+"""
 
     [notes.provider]
         title = "Provider Changes"
