fix: ci failures due to TF state removal
Skip the provider upgrade tests since TF testing framework does not
provide a way to test this easily now.

Also bump deps.

Signed-off-by: Noel Georgi <git@frezbo.dev>
(cherry picked from commit ff0e2adec13192716b9cf2180baa1bff2843387d)

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -69,9 +69,6 @@ linters-settings:
   govet:
     check-shadowing: true
     enable-all: true
-  depguard:
-    list-type: blacklist
-    include-go-root: false
   lll:
     line-length: 200
     tab-width: 4
@@ -121,6 +118,7 @@ linters:
   disable:
     - exhaustruct
     - exhaustivestruct
+    - depguard # ref: https://github.com/golangci/golangci-lint/issues/3906
     - forbidigo
     - funlen
     - gas
