--- a/hack/release.toml
+++ b/hack/release.toml
@@ -6,12 +6,12 @@ github_repo = "siderolabs/terraform-provider-talos"
 match_deps = "^github.com/(siderolabs/[a-zA-Z0-9-]+)$"
 
 previous = "v0.2.1"
-pre_release = true
+pre_release = false
 
 [notes]
 
     [notes.updates]
         title = "Component Updates"
         description = """\
-Talos sdk: v1.5.0-beta.0
+Talos sdk: v1.5.0
 """
