--- a/hack/release.toml
+++ b/hack/release.toml
@@ -5,13 +5,19 @@ project_name = "terraform-provider-talos"
 github_repo = "siderolabs/terraform-provider-talos"
 match_deps = "^github.com/(siderolabs/[a-zA-Z0-9-]+)$"
 
-previous = "v0.2.1"
+previous = "v0.3.2"
 pre_release = true
 
 [notes]
 
+    [notes.talos_cluster_health]
+        title = "Talos Cluster Health data source"
+        description = """\
+`talos_cluster_health` data source has been added and the `wait` parameter from the `talos_cluster_kubeconfig` data source is now deprecated.
+"""
+
     [notes.updates]
         title = "Component Updates"
         description = """\
-Talos sdk: v1.5.0-beta.0
+Talos sdk: v1.6.0-alpha.0
 """
