fix: talos_version nil parsing
Fix talos_version validation code.

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,9 @@ permissions:
   contents: write
 jobs:
   goreleaser:
-    runs-on: self-hosted
+    runs-on:
+      - self-hosted
+      - generic
     steps:
       - name: Checkout
         uses: actions/checkout@v3
