--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -1,4 +1,7 @@
 name: acceptance-tests
+concurrency:
+  group: ${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
 on:
   pull_request:
     paths:
@@ -7,7 +10,9 @@ on:
       - '**.go'
 jobs:
   acc-tests:
-    runs-on: self-hosted
+    runs-on:
+      - self-hosted
+      - generic
     env:
       GOTOOLCHAIN: local
     steps:
