--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -3,7 +3,9 @@ on:
   pull_request:
 jobs:
   check-dirty:
-    runs-on: self-hosted
+    runs-on:
+      - self-hosted
+      - generic
     env:
       GOTOOLCHAIN: local
     steps:
