--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -1,4 +1,7 @@
 name: acceptance-tests
+concurrency:
+  group: ${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
 on:
   pull_request:
     paths:
@@ -6,8 +9,12 @@ on:
       - 'go.sum'
       - '**.go'
 jobs:
-  run-tests:
-    runs-on: ubuntu-latest
+  acc-tests:
+    runs-on:
+      - self-hosted
+      - generic
+    env:
+      GOTOOLCHAIN: local
     steps:
       - name: Checkout
         uses: actions/checkout@v3
