--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -2,8 +2,12 @@ name: check-dirty
 on:
   pull_request:
 jobs:
-  run-tests:
-    runs-on: ubuntu-latest
+  check-dirty:
+    runs-on:
+      - self-hosted
+      - generic
+    env:
+      GOTOOLCHAIN: local
     steps:
       - name: Checkout
         uses: actions/checkout@v3
