--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,9 @@ permissions:
   contents: write
 jobs:
   goreleaser:
-    runs-on: ubuntu-latest
+    runs-on:
+      - self-hosted
+      - generic
     steps:
       - name: Checkout
         uses: actions/checkout@v3
