--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -2,12 +2,8 @@ name: check-dirty
 on:
   pull_request:
 jobs:
-  check-dirty:
-    runs-on:
-      - self-hosted
-      - generic
-    env:
-      GOTOOLCHAIN: local
+  run-tests:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
