--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,9 +18,7 @@ permissions:
   contents: write
 jobs:
   goreleaser:
-    runs-on:
-      - self-hosted
-      - generic
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
