--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -10,6 +10,7 @@ on:
       - '**.go'
 jobs:
   acc-tests:
+    if: (!startsWith(github.head_ref, 'renovate/') && !startsWith(github.head_ref, 'dependabot/'))
     runs-on:
       - self-hosted
       - generic
