--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -3,6 +3,7 @@ on:
   pull_request:
 jobs:
   check-dirty:
+    if: (!startsWith(github.head_ref, 'renovate/') && !startsWith(github.head_ref, 'dependabot/'))
     runs-on:
       - self-hosted
       - generic
