--- a/hack/release.toml
+++ b/hack/release.toml
@@ -5,19 +5,19 @@ project_name = "terraform-provider-talos"
 github_repo = "siderolabs/terraform-provider-talos"
 match_deps = "^github.com/(siderolabs/[a-zA-Z0-9-]+)$"
 
-previous = "v0.3.2"
+previous = "v0.5.0"
 pre_release = true
 
 [notes]
 
-    [notes.talos_cluster_health]
-        title = "Talos Cluster Health data source"
+    [notes.talos_machine_secrets]
+        title = "Talos Machine Secrets"
         description = """\
-`talos_cluster_health` data source has been added and the `wait` parameter from the `talos_cluster_kubeconfig` data source is now deprecated.
+`talos_machine_secrets` resource now regenerates client config when the time to expiry is less than a month.
 """
 
     [notes.updates]
         title = "Component Updates"
         description = """\
-Talos sdk: v1.6.0-alpha.0
+Talos sdk: v1.8.0-alpha.0
 """
