feat: add `talos_image_factory_url` data source
Add `talos_image_factory_url` data source.

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -39,6 +39,7 @@ jobs:
             libvirt-daemon-system \
             qemu-kvm \
             qemu-utils \
+            qemu-block-extra \
             ovmf
 
           sudo virtlockd -d
