--- a/hack/release.toml
+++ b/hack/release.toml
@@ -6,7 +6,7 @@ github_repo = "siderolabs/terraform-provider-talos"
 ignore_deps = ["google.golang.org/grpc"]
 
 previous = "v0.5.0"
-pre_release = true
+pre_release = false
 
 [notes]
 
