--- a/hack/release.toml
+++ b/hack/release.toml
@@ -5,13 +5,13 @@ project_name = "terraform-provider-talos"
 github_repo = "siderolabs/terraform-provider-talos"
 ignore_deps = ["google.golang.org/grpc"]
 
-previous = "v0.6.1"
-pre_release = false
+previous = "v0.7.1"
+pre_release = true
 
 [notes]
 
     [notes.updates]
         title = "Component Updates"
         description = """\
-Talos sdk: v1.9.0
+Talos sdk: v1.10.0-beta.0
 """
