--- a/hack/release.toml
+++ b/hack/release.toml
@@ -6,12 +6,12 @@ github_repo = "siderolabs/terraform-provider-talos"
 ignore_deps = ["google.golang.org/grpc"]
 
 previous = "v0.7.1"
-pre_release = true
+pre_release = false
 
 [notes]
 
     [notes.updates]
         title = "Component Updates"
         description = """\
-Talos sdk: v1.10.0-beta.0
+Talos sdk: v1.10.0
 """
