chore: bump deps
Bump dependencies.

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -12,8 +12,7 @@ jobs:
   acc-tests:
     if: (!startsWith(github.head_ref, 'renovate/') && !startsWith(github.head_ref, 'dependabot/'))
     runs-on:
-      - self-hosted
-      - generic
+      group: large
     env:
       GOTOOLCHAIN: local
     steps:
