--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,7 @@ permissions:
 jobs:
   goreleaser:
     runs-on:
-      - self-hosted
-      - generic
+      group: generic
     steps:
       - name: Checkout
         uses: actions/checkout@v4
